syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpcdemo";
option java_outer_classname = "ValueStoreProto";
option objc_class_prefix = "HLW";

package main;

service ValueStore {
    rpc StoreValue (StoreValueRequest) returns (StoreValueResponse) {}
    rpc GetValueByPath (GetValueByPathRequest) returns (GetValueResponse) {}
    rpc GetValueByUUID (GetValueByUUIDRequest) returns (GetValueResponse) {}
}

message StoreValueRequest {
    string path = 1;
    string value = 2;
}

message StoreValueResponse {
    string uuid = 1;
    string path = 2;
    string created_at = 3;
    int64 version = 4;
}

message GetValueByPathRequest {
    string path = 1;
    int64 version = 2;
}

message GetValueByUUIDRequest {
    string uuid = 1;
}

message GetValueResponse {
    string uuid = 1;
    string value = 2;
}
